# HandyMan

./: CMakeLists.txt  Main.qml  main.cpp
Imports/: CMakeLists.txt  Constants.qml  StatsDataModel.qml  constants.cpp  constants.h
Logic/: CMakeLists.txt  fileworker.cpp  fileworker.h  statitem.cpp  statitem.h  statsmanager.cpp  statsmanager.h  template.cpp
UI/: CMakeLists.txt  HomePage.qml  InitialPage.qml  SetDefaults.qml
UI/UI_Component/: CMakeLists.txt  CircuralIndicator.qml  SetDefaultsDelegate.qml
UI/UI_Component/assets/: background.avif
